# own-workflow

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  api.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-push-image.yml
.helloagents/: CHANGELOG.md  INDEX.md  context.md
.helloagents/archive/: _index.md
.helloagents/modules/: _index.md  app.md  delivery.md  flows.md  integrations.md  runtime.md
app/: dependencies.py  main.py  model.py  routes.py  schemas.py  settings.py  utils.py
model/: __init__.py  artifact.py  db.py  run.py  schedule.py  store_entry.py  tenant.py  types.py
own_workflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: init_env.py  run_flow_once.py
tests/: test_app_model.py  test_app_routes.py  test_artifact_model.py  test_content_collect_nodes.py  test_content_create_artifacts.py  test_content_create_images.py  test_content_create_product_images.py  test_flow_common.py  test_flows_registry.py  test_generation_aliases.py  test_runtime_persistence.py  test_runtime_scheduler.py  test_runtime_smoke.py  test_s3_upload.py  test_store_database.py  test_store_factory.py  test_store_feishu.py  test_workflow_ai_config.py
workflow/: __init__.py  jsonfile.py  settings.py  state.py
workflow/core/: __init__.py  ai.py  env.py  prompting.py  text.py
workflow/flow/: common.py  registry.py
workflow/integrations/: __init__.py  feishu.py  hotspots.py  image_generation.py  s3.py
workflow/runtime/: __init__.py  context.py  engine.py  persistence.py  scheduler.py  tenant.py  (+1 more)
(+98 files in other folders)
