[project]
name = "own-workflow"
version = "0.1.0"
description = "Standalone LangGraph workflow service with multi-tenant database-backed storage."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "langchain-core>=1.3.0,<2.0.0",
  "langchain-openai>=1.0.0,<2.0.0",
  "langgraph>=0.6.0,<1.0.0",
  "openai>=1.0.0,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["app*", "workflow*", "model*"]
